# CourseWork_Final

./: CMakeLists.txt  CMakeSettings.json  README.md  animals.h  animalsmap.c  animalsmap.h  application.c  application.h  main.c  settings.c  settings.h  turn.c  turn.h  userinterface.c  userinterface.h  utils.c  utils.h
